# py-graphql-query-manager

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: index.md  introspection.md  query_generation.md
examples/: advanced_query.py  basic_usage.py
src/graphql_query_manager/: __init__.py  introspection.py  query_generator.py  types.py  utils.py
tests/: test_introspection.py  test_query_generator.py
tests/fixtures/: schema_data.json
