[metadata]
name = graphql-query-manager
version = 0.1.0
description = A Python library for generating GraphQL queries from introspection data.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/graphql-query-manager
license = MIT
keywords = graphql, query, introspection, python

[options]
packages = find:
install_requires =
    requests

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*